# AI-Companion-Relationship-Safety-Lab

relsafe-sim/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
relsafe-sim/annotations/m5h-001/: package_validation_report.md
relsafe-sim/benchmark/v0.1/: CHANGELOG.md  benchmark_manifest.json  evaluator_policy.json  metric_confidence_registry.json
relsafe-sim/configs/companion_policies/: bounded_supportive.yaml  high_sycophancy.yaml  reality_grounding.yaml
relsafe-sim/configs/experiments/: concordia_smoke_test.yaml  mvp_smoke_test.yaml  mvp_virtual_relationship.yaml
relsafe-sim/configs/interventions/: abrupt_persona_memory_update.yaml  no_update.yaml
relsafe-sim/configs/personas/: anxious_low_support.yaml  neutral_moderate_support.yaml  secure_high_support.yaml
relsafe-sim/configs/scenarios/: interpersonal_conflict_001.yaml
relsafe-sim/configs/validation/: ablation_study.yaml  cross_model_pilot.yaml  human_calibration.yaml  metamorphic_tests.yaml  offline_robustness.yaml  prompt_perturbation.yaml  public_case_alignment.yaml  transition_sensitivity.yaml
relsafe-sim/docs/: annotation-changelog-m5h-002.md  architecture.md  benchmark-card.md  benchmark-spec.md  benchmark-v0.1-card.md  data-dictionary.md  failure-taxonomy.md  human-annotation-guide.md  methodology.md  milestone-1-review.md  milestone-2-review.md  milestone-3-review.md  milestone-4-frozen-interfaces.md  milestone-5-review.md  milestone-5h-judge-review.md  milestone-5h-review.md  milestone-5r-final-review.md  milestone-5r-remediation-plan.md  milestone-5r-review.md  milestone-6-5-review.md  provider-safety.md  reproducibility.md  validation-framework.md  validation-plan.md
relsafe-sim/docs/adr/: 0001-concordia-adapter-boundary.md  0002-evaluator-ensemble.md  0003-explicit-state-transition-model.md  0004-model-role-separation.md  0005-provider-record-replay.md
relsafe-sim/docs/papers/: SH_T-template-docx.docx  virtual-humans-have-biases-SH_T-codex-v2.docx  virtual-humans-have-biases-SH_T-codex-v3.docx  virtual-humans-have-biases-SH_T-codex-v4.docx  virtual-humans-have-biases-SH_T-codex-v5.docx  virtual-humans-have-biases-SH_T-codex.docx  virtual-humans-have-biases-claims-register-claude.md  virtual-humans-have-biases-claims-register-codex.md  virtual-humans-have-biases-data-map-claude.md  virtual-humans-have-biases-data-map-codex.md  virtual-humans-have-biases-draft-claude-humanized.md  virtual-humans-have-biases-draft-claude.md  virtual-humans-have-biases-draft-codex.md  virtual-humans-have-biases-outline-claude.md  virtual-humans-have-biases-outline-codex.md  virtual-humans-have-biases-revised-codex-v3.md  virtual-humans-have-biases-revision-report-codex-v3.md  virtual-humans-have-biases.docx  ~$rtual-humans-have-biases-SH_T-codex-v5.docx  ~WRL0644.tmp
relsafe-sim/docs/releases/: benchmark-v0.1-evidence-update.md  benchmark-v0.1.md  m6-deepseek-baseline-001.md
relsafe-sim/docs/templates/: product-relationship-safety-report.md
relsafe-sim/outputs/m5r_direct_pilot_001/: aggregate_results.json  role_validation.json
relsafe-sim/outputs/m5r_final_001/: final_results.json
relsafe-sim/outputs/m5r_full_001/: full_results.json
relsafe-sim/outputs/m5r_pilot_001/: aggregate_results.json  role_validation.json
relsafe-sim/outputs/m5r_pilot_002/: aggregate_results.json
relsafe-sim/scripts/: build_benchmark_v0.1.py  build_m5h_annotation_pipeline.py  build_portable_kits.py  fill_paper_template.py  finalize_m6_5_evidence.py  run_benchmark_v0.1.py  run_m5h_calibration.py  run_m5h_full_calibration.py  run_m5h_judge.py  run_m5r_direct_pilot.py  run_m5r_final.py  run_m5r_full_validation.py  run_m5r_real_pilot.py  run_m6_5_experiments.py
relsafe-sim/tests/: audit_m3.py  audit_m4.py  conftest.py
relsafe-sim/tests/contract/: test_metric_contract.py  test_simulation_engine_contract.py
relsafe-sim/tests/fixtures/: sample_configs.py
relsafe-sim/tests/integration/: test_concordia_smoke.py  test_validation_integration.py
relsafe-sim/tests/unit/: test_agreement.py  test_budget_tracker.py  test_cache_and_replay.py  test_companion_policy.py  test_concordia_adapters.py  test_concordia_degradation.py  test_config_validation.py  test_continuity_rules.py  test_deterministic_episode.py  test_dry_run.py  test_engine_factory.py  test_evaluators.py  test_event_store.py  test_events.py  test_exit_rules.py  test_failure_classifier.py  test_fake_provider.py  test_intervention.py  test_m4_state_transitions.py  test_metamorphic.py  test_persona.py  test_provider_contract.py  (+6 more)
(+270 files in other folders)
